Update on Overleaf.

--- a/estilosexercicios.sty
+++ b/estilosexercicios.sty
@@ -21,6 +21,7 @@
 \usepackage{lipsum}
 \usepackage{multicol}
 \usepackage{pifont}
+\usepackage{bm}
 
 
 %% ----------- Teoremas, Exercícios e Etc ------------- %%%
