--- a/listas.tex
+++ b/listas.tex
@@ -10268,7 +10268,7 @@ Mostre que $T \in \mathcal{L}(V)$ é normal se, e somente se, $\norm{T(v)} = \no
 \[
 \prin{T(v), T(v)} = \prin{v, T^{*}T(v)} = \prin{v, TT^{*}(v)} = \prin{T^{*}(v), T^{*}(v)}.
 \]
-Como $\norm{T(v)} = \sqrt{\print{T(v), T(v)}}$ e $\norm{T^{*}(v)} = \sqrt{\print{T^{*}(v), T^{*}(v)}},$ segue o resultado desejado. 
+Como $\norm{T(v)} = \sqrt{\prin{T(v), T(v)}}$ e $\norm{T^{*}(v)} = \sqrt{\prin{T^{*}(v), T^{*}(v)}},$ segue o resultado desejado. 
 }
 \begin{exercicio}
 Seja $V = \mathcal{P}_n(\mathbb{R})$ com produto interno $\prin{f,g} = \displaystyle\int\limits_{-1}^1 f(x)g(x) \dif x.$ Prove que o operador $T \in \mathcal{L}(V)$ dado por
@@ -10379,7 +10379,7 @@ Um operador auto-adjunto $T \in \mathcal{L}(V)$ chama-se \emph{positivo definido
 \solucao{}
 \begin{exercicio}
 Decomponha num produto $T = SU$ de um operador auto-adjunto positivo definido $S$ e um operador ortogonal $U$ cada um dos operadores $T$ representados numa base ortonormal pelas seguintes matrizes:
-\dividiritens{
+\dividiritensdiv{6}{
 \task[\pers{a}] $\begin{pmatrix}
 2 & -1 \\
 2 & 1
@@ -10707,6 +10707,57 @@ Sejam $U, V, W$ $K$-espaços vetoriais. Mostre que
 
 \exercicio{31} 
 \solucao{}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \end{document} 
 
 %Interessante:
