--- a/ultimalista.tex
+++ b/ultimalista.tex
@@ -103,7 +103,7 @@ p_A(\lambda) = \det(A - \lambda I) = \det \left( \begin{pmatrix}
 2 & -2-\lambda
 \end{pmatrix}  \right) = \lambda^2 + \lambda - 6
 \]
-Como $p_A(\lambda) = (\lambda + 3)(\lambda - 2),$ os autovalores são $\lambda_1 = -3$ e $\lambda_2 = 2.$ Encontremos autovetores associados a eles. Seja $v_i = (x_i,y_i)$ um autovetor associado a $\lambda_i, i =1,2.$ Então
+Comoo $p_A(\lambda) = (\lambda + 3)(\lambda - 2),$ os autovalores são $\lambda_1 = -3$ e $\lambda_2 = 2.$ Encontremos autovetores associados a eles. Seja $v_i = (x_i,y_i)$ um autovetor associado a $\lambda_i, i =1,2.$ Então
 \[
 Av=  \lambda_1 v_1 \Rightarrow \begin{pmatrix}
 1 & 2 \\
