--- a/name/main.tex
+++ b/name/main.tex
@@ -3711,7 +3711,7 @@ seja \emph{mínima}. Para isso, pela Proposição \ref{proj2}, podemos considera
 
 \bigskip
 \noindent
-\textcolor{red}{EXEMPLO NUMÉRICO QUE ESTOU COM PREGUIÇA DE ESCREVER PORQUE É CHATO DEMAIS}
+\textcolor{red}{EXEMPLO NUMÉRICO QUE ESTOU COM PREGUIÇA DE ESCREVER PORQUE É CHATO DEMAIS - ESTÁ NA LISTA!}
 
 \newpage
 
